Make sure hamburger in header is always visible.
Simplify header and sidebar CSS.

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,9 +1,16 @@
 .container {
-    width: 100%;
     height: 60px;
     position: fixed;
     z-index: 3; /* 2 for detail pane, 1 for footer logos */
     top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
     pointer-events: none;
     /* children need to opt into mouse events with pointer-events: auto */
 }
